--- a/config/database.yml
+++ b/config/database.yml
@@ -56,7 +56,7 @@ production:
   encoding: unicode
   database: biscuit_recruitment_production
   pool: 5
-  username: soloweb
+  username: deploy
   password: solo2014
 
 cucumber:
