removed candc settings

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,5 +1,5 @@
-upstream unicorn_candc {
-  server unix:/tmp/unicorn.candc.sock fail_timeout=0;
+upstream unicorn_biscuit {
+  server unix:/tmp/unicorn.biscuit.sock fail_timeout=0;
 }
 
 server {
@@ -7,11 +7,11 @@ server {
   # auth_basic_user_file  /etc/nginx/conf.d/htpasswd;
 
   listen 80;
-  server_name candc.sololabs.co.uk;
-  root /home/deploy/apps/candc_search/current/public;
+  server_name biscuit.sololabs.co.uk;
+  root /home/deploy/apps/biscuit_recruitment/current/public;
 
   location ~ ^/(assets)/  {
-    root /home/deploy/apps/candc_search/current/public;
+    root /home/deploy/apps/biscuit_recruitment/current/public;
     gzip_static on; # to serve pre-gzipped version
     expires max;
     add_header Cache-Control public;
@@ -27,7 +27,7 @@ server {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $http_host;
     proxy_redirect off;
-    proxy_pass http://unicorn_candc;
+    proxy_pass http://unicorn_biscuit;
   }
 
   error_page 500 502 503 504 /500.html;
